--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,19 @@
 name: Generate Datas
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+  schedule:
+    - cron: "* */12 * * *" # Executa a cada 12 horas
   workflow_dispatch:
+
+permissions:
+  contents: write  # Concede permissão de escrita para o GitHub Actions
 
 jobs:
   build:
     name: Jobs to update datas
     runs-on: ubuntu-latest
     steps:
-      # Snake Animation
+      # Gera a animação Snake
       - uses: Platane/snk@master
         id: snake-gif
         with:
@@ -23,4 +26,3 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
